syntax = "proto3";

package subpub;

option go_package = "./;subpub"; // Указываем путь к пакету Go, в котором будет генерироваться код

import "google/protobuf/empty.proto";

service PubSub {
  rpc Subscribe(SubscribeRequest) returns (stream Event);
  rpc Publish(PublishRequest) returns (google.protobuf.Empty);
}

message SubscribeRequest {
  string key = 1;
}

message PublishRequest {
  string key = 1;
  string data = 2;
}

message Event {
  string data = 1;
}
